#135 Top of messages no longer hidden by tab toolbar.

--- a/public/stylesheets/less/rp-message.less
+++ b/public/stylesheets/less/rp-message.less
@@ -4,7 +4,8 @@
 	transform: translate3d(0px, 0px, 0px) !important;
 	-webkit-transform: translate3d(0px, 0px, 0px) !important;
 	margin-top: -50px !important;
-	// padding-top: 76px !important;
+	padding-top: 76px !important;
+	
 }
 
 .rp-message-comment-body {
